# ballad

./: .env.example  .gitignore  AGENTS.md  README.md  coding Agent tui需求.md  config.example.yaml  package.json  pyproject.toml  python-deepx.md  tsconfig.json
.monitor/: check.sh  prev.md  task.py
examples/: shimmer-demo.tsx
scripts/: smoke-provider.ts
specs/: README.md  core-agent.spec.md  core-provider.spec.md  state-management.spec.md  tui-clipboard.spec.md  tui-history.spec.md  tui-hotkeys.spec.md  tui-input.spec.md  tui-layout.spec.md  tui-shimmer.spec.md  tui-slash-commands.spec.md
src/: index.ts
src/core/: agent.ts  contract.ts  provider.ts
src/core/graph/: graph.ts  nodes.ts  state.ts
src/core/providers/: anthropic.ts  mock.ts  openaiChat.ts  openaiResponses.ts
src/core/tools/: bash.ts  query.ts  read.ts  registry.ts  write.ts
src/deepx/: __init__.py  __main__.py  cli.py  logging_config.py  main.py  repl.py  web.py
src/deepx/agent/: __init__.py  compress.py  prefix_cache.py  router.py  runner.py  vision_probe.py
src/deepx/codegraph/: __init__.py  index.py
src/deepx/config/: __init__.py  models.py  settings.py
src/deepx/graph/: __init__.py  edges.py  events.py  nodes.py  state.py  workflow.py
src/deepx/llm/: __init__.py  client.py  usage.py
src/deepx/mcp/: __init__.py  client.py  config.py  manager.py
src/deepx/ocr/: __init__.py  engine.py  router.py
src/deepx/session/: __init__.py  manager.py  store.py
src/deepx/skill/: __init__.py  builtin.py  install.py  loader.py  search.py  source.py  tool.py  tool_registry.py
src/deepx/tools/: __init__.py  base.py
src/deepx/tools/builtins/: __init__.py  web.py  (+12 more)
src/deepx/tui/: __init__.py  app.py  bindings.py  input_area.py  message_list.py  skill_modal.py  styles.py  token_panel.py
tests/arch/: redlines.test.ts
tests/core/: agent.test.ts  contract.test.ts  provider.test.ts
tests/core/graph/: graph.test.ts
tests/core/providers/: anthropic.test.ts  mock.test.ts  openaiChat.test.ts  openaiResponses.test.ts
tests/core/tools/: tools.test.ts
tests/tui/: App.integration.test.tsx  DynamicInput.test.tsx  LogViewer.test.tsx  SelectMenu.test.tsx  ShimmerText.test.tsx  StatusBar.test.tsx  clipboard.test.ts  inputModel.test.ts  logLines.test.ts  selectMenu.test.ts  shimmer.test.ts  slashCommands.test.ts
(+3 files in other folders)
