[project]
name = "deepx-python"
version = "0.1.0"
description = "Terminal AI programming agent — Python implementation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "DeepX Team"}
]
keywords = ["ai", "agent", "claude-code", "terminal", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # LLM / AI
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "tiktoken>=0.7.0",
    # TUI
    "textual>=0.80.0",
    "rich>=13.0.0",
    # Config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tomlkit>=0.12.0",
    # HTTP
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    # OCR (optional — requires platform-specific wheels)
    # "paddleocr>=2.9.0",
    # "paddlepaddle>=3.0.0",
    # Code analysis (optional — for CodeGraph syntax analysis)
    # "tree-sitter>=0.21.0",
    # "tree-sitter-languages>=1.10.0",
    # MCP (optional — for MCP server integration)
    # "mcp>=1.0.0",
    # "fastmcp>=1.0.0",
    # CLI
    "typer>=0.12.0",
    # Utils
    "orjson>=3.10.0",
    "tenacity>=8.2.0",
    "shellingham>=1.2.0",
    "fastmcp>=3.4.0",
    "mcp>=1.27.2",
    "pillow>=12.2.0",
    "pytesseract>=0.3.13",
    "rapidocr>=3.8.1",
    "duckduckgo-search>=8.1.1",
    "ddgs>=9.14.4",
    "ptyprocess>=0.7.0",
    "pyte>=0.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
deepx = "deepx.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepx"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
